Attempt at fixing media not showing

--- a/TIW2021-Atanassov-Bruno-JS/WebContent/CSS/mystyle.css
+++ b/TIW2021-Atanassov-Bruno-JS/WebContent/CSS/mystyle.css
@@ -1,7 +1,3 @@
-.indented {
-	text-indent: 25px;
-}
-
 .boxed {
 	border: 1px solid black;
 }
@@ -68,20 +64,25 @@ th.sortable, .up, .down {
 	cursor: pointer;
 }
  
-.boldarrow{
-	color: red;
-	font-weight: bold;
-}
-
-.normalarrow{
-	color: black;
-	font-weight: normal;
-}
-
 .selected{
 	color: red;
 }
 
 .notselected{
 	color: black;
+}
+
+/*background*/
+#bg-image {
+  /* Add the blur effect */
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 } 
